Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110995

Qt Multimedia Video not working on Nvidia Xavier and Orin platforms

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.5.1, 6.6.0
    • 6.4.2
    • Multimedia
    • None
    • Yocto Linux (kirkstone) running on ARM
    • Linux/Yocto, Linux/Other display system
    • 69c9e2ce0 (dev), e6c476d40 (6.4), 484a9110d (6.5)

      We are developing a Linux EGLFS application using Qt QML that
      runs on NVidia Xavier and Orin platforms.

      When trying to playback a video file using QML Video items the
      video did not play and the gstreamer log indicated that the
      various gstreamer elements used failed to negotiate.
      Some debugging later , we found that the playback pipeline using
      the nvv4l2decoder element was lacking a conversion plugin to work
      together with the "videosinkbin".

      The default "videoconvert" plugin could not handle the NVidia formats
      used.

      As a workaround, the NVidia "nvvidconv" plugin was added to
      QGstreamerVideoSink in a similar fashion as "imxvideoconvert_g2d"
      had been added before.
       
      This solved the issue. A patch containing this fix is attached
      to this bug report.

        For Gerrit Dashboard: QTBUG-110995
        # Subject Branch Project Status CR V

            laknoll Lars Knoll
            henrikthillman Henrik Thillman
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes