Add NVidia specific conversion element to already existing IMX workaround

The NVidia conversion element is necessary for the QT videoSinkBin to
be able to work together with the Nvidia formats used by the
nvv4l2decoder.

Fixes: QTBUG-110995
Change-Id: Icb88caf91eeaf5beeeed18e7ac5b3971ef5a83ca
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 7d0563ae811f3a6783c068a039a840db4c8400ce)
Reviewed-by: Lars Knoll <lars@knoll.priv.no>